1.21.5 was hell, sorta